Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="author" content="temvik">
     <title>WhatsApp group invitation</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <meta property="og:image" content="post.jpg">
+    <meta property="og:image" content="https://thumbsnap.com/i/G9w7BQSi.png">
     <link rel="stylesheet" href="style.css">
 	<link href="https://thumbsnap.com/i/G9w7BQSi.png" rel="shortcut icon">
 </head>
@@ -234,3 +234,4 @@
 </body>
 
 </html>
+
