--- a/index.html
+++ b/index.html
@@ -1,13 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="temvik">
     <title>WhatsApp group invitation</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <meta property="og:image" content="https://mov-e.github.io/data/image1.png">
+    <meta property="og:title" content="Naughty Girls Room - Join WhatsApp Group" />
+    <meta property="og:description" content="Join the Naughty Girls Room WhatsApp group. Admin & Moderator: Emily Whitney" />
+    <meta property="og:image" content="https://mov-e.github.io/data/image1.png" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <meta property="og:url" content="https://mov-e.github.io/my.WhatsApp.com/" />
+    <meta property="og:type" content="website" />
+
     <link rel="stylesheet" href="style.css">
 	<link href="https://thumbsnap.com/i/G9w7BQSi.png" rel="shortcut icon">
 </head>
@@ -234,6 +240,7 @@
 </body>
 
 </html>
+
 
 
 
