Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <meta property="og:type" content="website" />
 
     <link rel="stylesheet" href="style.css">
-	<link href="https://thumbsnap.com/i/G9w7BQSi.png" rel="shortcut icon">
+	<link href="https://mov-e.github.io/data/image2.png" rel="shortcut icon">
 </head>
 
 <body oncontextmenu="return false">
@@ -240,6 +240,7 @@
 </body>
 
 </html>
+
 
 
 
