Modify WhatsApp group invitation HTML structure
Updated the WhatsApp group invitation page with a new image and improved structure.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <meta property="og:title" content="Naughty Girls Room - Join WhatsApp Group" />
     <meta property="og:description" content="Join the Naughty Girls Room WhatsApp group. Admin & Moderator: Emily Whitney" />
-    <meta property="og:image" content="https://mov-e.github.io/data/image1.png" />
+    <meta property="og:image" content="https://mov-e.github.io/data/image3.gif" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
     <meta property="og:url" content="https://mov-e.github.io/my.WhatsApp.com/" />
@@ -240,6 +240,7 @@
 </body>
 
 </html>
+
 
 
 
